--- a/src/Pages/Footer/footer-scss/_footer.scss
+++ b/src/Pages/Footer/footer-scss/_footer.scss
@@ -1,10 +1,12 @@
 .footer {
+    height: 200px;
     background-color: white;
     padding: 20px 180px;
     filter: drop-shadow(0px 0.5px 0.5px rgba(0, 0, 0, 0.25));
     justify-content: space-between;
     display: flex;
     align-items: center;
+    
 
     &__logo {
         align-items: center;
@@ -34,16 +36,35 @@
 
     &__mobil {
         text-align: center;
+        font-family: "Inconsolata", monospace;
+        font-weight: 600;
+
+&-text{
+    margin-top: 0px;
+}
 
         &-images {
+            width: auto;
             display: flex;
             gap: 10px;
+            align-items: center;
+            justify-content: center;
+           
+
+                img{
+                  width: auto;
+                  height: 42px;
+                }
+            
+
+            
+           
         }
     }
 
     &__contact {
-
-
+        font-family: "Inconsolata", monospace;
+ 
 
         p {
             margin: 0px;
@@ -52,7 +73,14 @@
         &-text {
             display: grid;
             gap: 5px;
+           
+
         }
+
+        &-header{
+           font-weight: 600;
+        }
+
 
         &-phone {
             display: flex;
