--- a/src/Pages/Navbar/navbar-scss/_navbar.scss
+++ b/src/Pages/Navbar/navbar-scss/_navbar.scss
@@ -1,5 +1,5 @@
 .navigation {
-
+    font-family: "Inconsolata", monospace;
     position: fixed;
     left: 0;
     top: 0;
@@ -49,7 +49,7 @@
             p {
                 margin: 0px;
                 padding: 0px;
-                font-family: "Roboto", sans-serif;
+                font-family: "Inconsolata", monospace;
                 font-style: normal;
                 font-weight: 400;
                 font-size: 22px;
@@ -107,7 +107,7 @@
     color: white;
     border: 0px;
 
-    font-family: "Roboto", sans-serif;
+    font-family: "Inconsolata", monospace;
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
@@ -125,7 +125,7 @@
     border-radius: 100px;
     color: rgba(90, 108, 165, 1);
 
-    font-family: "Roboto", sans-serif;
+    font-family: "Inconsolata", monospace;
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
