--- a/src/Pages/RegisterPage/register-scss/_register.scss
+++ b/src/Pages/RegisterPage/register-scss/_register.scss
@@ -1,22 +1,11 @@
 // font Roboto
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
 
 .container {
     width: max-content;
     height: max-content;
     padding: 43px 78px;
-
-
-
-    .formyapısı{
-        min-height: 100%;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-    
-    }
-
 }
 
 .header {
@@ -49,22 +38,27 @@
 .form {
     min-height: 663px;
     display: flex;
-    gap: 30px;
     justify-content: space-around;
     align-items: center;
 
 
     &__description {
-        width: 450px;
+        width: 500px;
         justify-content: center;
         align-items: center;
         text-align: center;
         padding: 60px;
 
-
-        &-img {
+        &-register{
+            width: 500px;
             height: 500px;
         }
+
+        &-login{
+            width: 500px;
+            height: 500px;
+        }
+
 
         &-text {
 
@@ -72,8 +66,8 @@
                 color: rgba(90, 108, 165, 1);
                 margin: 0px;
                 font-size: 36px;
-                font-family: "Roboto", sans-serif;
-                font-weight: 700;
+                font-family: "Inconsolata", monospace;
+                font-weight: 500;
                 line-height: 40px;
                 width: auto;
             }
@@ -111,17 +105,20 @@
         &-header {
             margin: 0px;
             width: auto;
-            font-family: "Roboto", sans-serif;
+            font-family: "Inconsolata", monospace;
             font-weight: 400;
             font-size: 32px;
             line-height: 40px;
             margin-bottom: 70px;
+            color: rgb(26, 26, 26);
         }
 
         &-items {
             display: grid;
             gap: 30px;
             justify-content: space-between;
+            color: rgb(26, 26, 26);
+            font-family: "Inconsolata", monospace;
         }
 
         &-item {
@@ -192,7 +189,7 @@
             text-align: center;
 
             p {
-                font-family: "Roboto", sans-serif;
+                font-family: "Inconsolata", monospace;
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 24px;
@@ -201,7 +198,7 @@
             }
 
             span {
-                font-family: "Roboto", sans-serif;
+                font-family: "Inconsolata", monospace;
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 24px;
