--- a/src/Pages/GalleryPage/gallery-scss/_gallery.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery.scss
@@ -1,3 +1,188 @@
+// .gallery-container {
+//     width: max-content;
+//     height: max-content;
+//     margin: 138px 0px 100px 0px;
+
+//     .days {
+//         display: grid;
+//         grid-template-columns: repeat(6, 1fr);
+//         gap: 16px;
+//         justify-content: space-between;
+//     }
+
+//     .calendar {
+//         text-align: left;
+//         display: grid;
+//         gap: 10px;
+//         justify-content: space-around;
+//         align-items: center;
+//         background-color: rgba(250, 250, 250, 1);
+//         border-radius: 5px;
+//         padding: 10px;
+//         cursor: pointer;
+//         box-shadow: 2px 2px 15px rgb(107, 107, 107);
+
+//         &:hover {
+//             background-color: rgb(146, 157, 193);
+//             color: white;
+//         }
+
+//         &.today {
+//             box-shadow: 2px 2px 15px rgb(107, 107, 107)k;
+//             background-color: rgb(146, 157, 193);
+
+//         }
+
+//         &__header {
+//             font-family: "Roboto", sans-serif;
+//             display: flex;
+//             gap: 2px;
+//             align-items: center;
+
+//             &-dayno {
+//                 margin: 0px;
+//                 font-size: 25px;
+//             }
+
+//             &-dayname {
+//                 margin: 0px;
+//                 font-size: 10px;
+//             }
+
+//             &-month {
+//                 margin: 0px;
+//                 font-size: 12px;
+//             }
+
+//         }
+
+//         &__image {
+//             width: 150px;
+//             height: 150px;
+//             background-color: rgba(241, 240, 240, 1);
+//             object-fit :  cover ;
+
+//         }
+
+//     }
+
+//     .month__container {
+//         text-align: left;
+//         align-items: center;
+//         justify-content: center;
+
+
+//         &-text {
+//             font-family: "Roboto", sans-serif;
+//             font-size: 40px;
+//             font-weight: 300;
+//             line-height: 16px;
+//             color: rgba(73, 69, 79, 1);
+//             padding: 20px 10px;
+
+
+//         }
+//     }
+
+
+
+
+//     .empty-content {
+//         width: max-content;
+//         display: flex;
+//         gap: 80px;
+//         align-items: center;
+//         justify-content: center;
+
+//     }
+
+//     .empty {
+//         display: block;
+//         gap: 10px;
+//         padding: 22px 15px 15px 15px;
+//         border-radius: 16px;
+//         border: 1px solid rgba(106, 127, 193, 1);
+//         cursor: pointer;
+
+
+//         &:hover {
+//             background-color: rgb(146, 157, 193);
+//             color: white;
+//         }
+
+
+//         &__header {
+//             font-family: "Roboto", sans-serif;
+//             display: flex;
+//             align-items: center;
+//             margin-bottom: 15px;
+//         }
+
+//         &-dayno {
+//             margin: 0px;
+//             font-size: 100px;
+//             font-weight: 400;
+//             line-height: 16px;
+//             text-align: left;
+
+//         }
+
+//         &__date {
+//             display: block;
+//             align-items: center;
+
+//             &-dayname {
+//                 margin: 20px 0px;
+//                 font-size: 45px;
+//                 font-weight: 400;
+//                 line-height: 16px;
+//                 text-align: left;
+//             }
+
+//             &-month {
+//                 margin: 20px 0px;
+//                 font-size: 45px;
+//                 font-weight: 400;
+//                 line-height: 16px;
+//                 text-align: left;
+//             }
+
+//         }
+
+//         &__image {
+//             width: 350px;
+//             height: 350px;
+//             background-color: rgba(241, 240, 240, 1);
+//         }
+
+
+//         &__info {
+//             width: 600px;
+//             position: relative;
+
+//             &-img {
+//                 width: 380px;
+//                 margin: 0px;
+//             }
+
+//             &-text {
+//                 width: 530px;
+//                 position: absolute;
+//                 top: 300px;
+//                 left: 50px;
+//                 font-size: 25px;
+//                 font-weight: 400;
+//                 line-height: 40px;
+//             }
+
+//         }
+
+
+//     }
+
+// }
+
+
 .gallery-container {
     width: max-content;
     height: max-content;
@@ -60,7 +245,7 @@
             width: 150px;
             height: 150px;
             background-color: rgba(241, 240, 240, 1);
-            object-fit :  cover ;
+            object-fit: cover;
 
         }
 
@@ -90,7 +275,7 @@
     .empty-content {
         width: max-content;
         display: flex;
-        gap: 80px;
+        gap: 30px;
         align-items: center;
         justify-content: center;
 
@@ -99,10 +284,12 @@
     .empty {
         display: block;
         gap: 10px;
-        padding: 22px 15px 15px 15px;
-        border-radius: 16px;
+        padding: 30px 20px 20px 20px;
+   
+        border-radius:16px;
         border: 1px solid rgba(106, 127, 193, 1);
         cursor: pointer;
+        
 
 
         &:hover {
@@ -112,10 +299,12 @@
 
 
         &__header {
-            font-family: "Roboto", sans-serif;
             display: flex;
+            gap: 3px;
             align-items: center;
             margin-bottom: 15px;
+            color: rgb(26, 26, 26);
+        
         }
 
         &-dayno {
@@ -124,16 +313,20 @@
             font-weight: 400;
             line-height: 16px;
             text-align: left;
-
         }
 
         &__date {
-            display: block;
+            display: grid;
             align-items: center;
+            gap: 10px;
+
+            p {
+                margin: 8px;
+            }
 
             &-dayname {
                 margin: 20px 0px;
-                font-size: 45px;
+                font-size: 40px;
                 font-weight: 400;
                 line-height: 16px;
                 text-align: left;
@@ -141,17 +334,59 @@
 
             &-month {
                 margin: 20px 0px;
-                font-size: 45px;
-                font-weight: 400;
+                font-size: 40px;
+                font-weight: 500;
                 line-height: 16px;
                 text-align: left;
             }
 
         }
 
+        // &__image {
+        //     width: 400px;
+        //     height: 400px;
+        //     background-color: rgba(241, 240, 240, 1);
+        // }
+
+
+        // &__info {
+        //     width: 600px;
+
+        //     &-img {
+        //         width: 380px;
+        //         margin: 0px;
+        //     }
+
+        //     &-text {
+        //         width: 530px;
+        //         top: 300px;
+        //         left: 50px;
+        //         font-size: 21px;
+        //         font-weight: 400;
+        //         line-height: 40px;
+
+
+        //         p{
+        //             margin: 0px;
+        //         }
+        //     }
+
+        //     &-button{
+        //         margin-top: 20px;
+        //         width: 200px;
+        //         background: linear-gradient(271.96deg, #6A7FC1 48.21%, #F3AFE5 100%);
+        //         color: white;
+        //         border-radius: 100px;
+        //         cursor: pointer;
+        //     }
+
+        // }
+
+
+
         &__image {
-            width: 350px;
-            height: 350px;
+            width: 400px;
+            height: 400px;
             background-color: rgba(241, 240, 240, 1);
         }
 
@@ -181,3 +416,7 @@
     }
 
 }
+
+
+
+
