--- a/src/Pages/Navbar/navbar-scss/_navbar.scss
+++ b/src/Pages/Navbar/navbar-scss/_navbar.scss
@@ -135,10 +135,8 @@
 
 
 .profile {
-    
-    // height: 412px;
     display: grid;
-    padding: 20px;
+    padding: 15px;
     gap: 10px;
     justify-content: center;
     align-items: center;
@@ -162,7 +160,7 @@
     }
 
     &__body {
-        width: 332px;
+        width: 250px;
         background: rgba(249, 249, 249, 1);
         padding: 15px;
         display: grid;
@@ -170,13 +168,21 @@
         text-align: left;
         box-shadow: 0px 0.5px 0.5px rgba(0, 0, 0, 0.3), 0px 0.5px 0.5px 1px rgba(0, 0, 0, 0.15);
         border-radius: 12px;
+        margin-bottom: 20px;
 
         h2 {
             margin: 0px;
         }
 
         p {
+            align-items: center;
+            display: flex;
+            gap: 10px;
             margin: 0px;
+
+            img{
+                width: 20px;
+            }
         }
 
     }
@@ -199,8 +205,8 @@
 
 
 
-        :hover {
-            background-color: #5A6CA5;
+        &:hover {
+            background: #5A6CA5;
             color: #FAFAFA;
         }
 
