--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -276,7 +276,9 @@
     &__notes {
         min-width: 676px;
         height: 676px;
-        display: block;
+        display: inline-block;
+        word-wrap: break-word;
+
         gap: 20px;
         border-radius: 16px;
         align-items: center;
@@ -314,7 +316,7 @@
             padding: 8px;
             gap: 8px;
             width: 660px;
-            min-height: 135px;
+            height: auto;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
@@ -326,13 +328,15 @@
         }
 
         &-title {
-            font-size: 14px;
-            font-weight: 500;
+            font-size: 16px;
+            font-weight: 700;
             line-height: 20px;
             letter-spacing: 0.10000000149011612px;
             display: flex;
             align-items: center;
             justify-content: space-between;
+
+   
             
         }
 
