--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -274,7 +274,7 @@
     
 
     &__notes {
-        min-width: 676px;
+        width: 676px;
         height: 676px;
         display: block;
         gap: 20px;
@@ -310,11 +310,12 @@
 
         &-area {
             margin: 20px 0px;
-            display: block;
+            display: inline-block;
+            word-wrap: break-word;
             padding: 8px;
             gap: 8px;
             width: 660px;
-            min-height: 135px;
+            height: auto;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
